src/test/ui/export-fully-qualified.stderr
error[E0425]: cannot find function `baz` in `foo`
  --> $DIR/export-fully-qualified.rs:6:25
   |
LL |     pub fn bar() { foo::baz(); }
   |                         ^^^ not found in `foo`
   |
help: possible candidate is found in another module, you can import it into scope
   |
LL |     use foo::baz;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
